--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ subjects:
 - !lcsh 'Barron, James, 1769-1851 -- Correspondence'
 - !lcsh 'Decatur, Stephen, 1779-1820 -- Correspondence'
 - !lcc 'E300'
+- GITenberg
 title: Correspondence, between the late Commodore Stephen Decatur and Commodore James
   Barron, which led to the unfortunate meeting of the twenty-second of March
 url: http://www.gutenberg.org/ebooks/34393
